syntax = "proto3";

option csharp_namespace = "GrpcService.Web";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

    rpc SayHello3 (stream HelloRequest) returns (stream HelloReply);
    rpc   GetProdSocket(stream ProductRequest)returns(stream ProductResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message ProductRequest{
 int32  prod_id = 1;
}

message  ProductResponse{
   int32 prod_socket = 1;
}